# mtab-project

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  nginx-proxy.conf  package-lock.json  package.json
.github/workflows/: docker-build.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: __init__.py  admin.py  authors.py  books.py  genres.py  health.py  orders.py  publishers.py  stats.py
backend/src/api/v1/routes/: router.py
backend/src/core/: config.py  database.py
backend/src/models/: __init__.py  admin.py  author.py  book.py  genre.py  order.py  order_item.py  publisher.py
backend/src/schemas/: admin.py  author.py  book.py  genre.py  order.py  publisher.py
backend/tests/: conftest.py  test_admin.py  test_endpoints.py  test_models.py
docs/: ARCHITECTURE.md  SPECIFICATION.md  STRUCTURE.md
frontend/: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  Dockerfile  Dockerfile.dev  build.mjs  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  globals.css  index.tsx  router.tsx
frontend/src/api/: auth.ts
frontend/src/components/: AdminDashboard.tsx  AdminNavbar.tsx  CustomerInfo.tsx  FailureScreen.tsx  LoadingScreen.tsx  OrderSummary.tsx  PaymentConfirmation.tsx  PriceRangeSlider.tsx  SuccessScreen.tsx
frontend/src/context/: AuthContext.tsx  CartContext.tsx
frontend/src/layouts/: Layout.tsx
scripts/: seed.py
(+9 files in other folders)
