[project]
name = "bookstore-api"
version = "0.0.1"
description = "Bookstore API for MTAB Project"
requires-python = ">=3.13"
dependencies = ["fastapi (>=0.128.0,<0.129.0)", "uvicorn (>=0.40.0,<0.41.0)", "dotenv (>=0.9.9,<0.10.0)"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)"
]
